--- a/OTE/src/views/ExtractorTemplatesView.ui
+++ b/OTE/src/views/ExtractorTemplatesView.ui
@@ -34,6 +34,9 @@
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
+     <property name="alternatingRowColors">
+      <bool>false</bool>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
      </property>
