--- a/OTE/src/views/ExplorerTemplatesView.ui
+++ b/OTE/src/views/ExplorerTemplatesView.ui
@@ -27,14 +27,7 @@
     <number>4</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QComboBox" name="comboBoxFilter"/>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="lineEditFilter"/>
-     </item>
-    </layout>
+    <widget class="QLineEdit" name="lineEditFilter"/>
    </item>
    <item>
     <widget class="QTableView" name="tableViewTemplates">
@@ -43,6 +36,9 @@
      </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>false</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
