--- a/OTE/src/dialogs/preferences/GeneralConfig.ui
+++ b/OTE/src/dialogs/preferences/GeneralConfig.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MiscConfig</class>
- <widget class="QWidget" name="MiscConfig">
+ <class>GeneralConfig</class>
+ <widget class="QWidget" name="GeneralConfig">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,19 +14,6 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
-    <widget class="QLabel" name="labelExplain">
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
